# Babel

./: #Babel.pro#  #Makefile#  #cmakefiles#  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Babel.pro  Babel.sln  Babel.vcxproj  Babel.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  IThread.h  Makefile  NetworkAPI.h  UNetworkAPI.cpp  XMLParser.cpp  XMLParser.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  babelclient.pro  cmake_install.cmake
Babel/: Babel.sln
Client/: CMakeLists.txt
Client/includes/: AudioCodec.h  AudioController.h  AudioInput.h  AudioOutput.h  Core.h  GUI.h  IAudio.hh  ICodec.h  InterClientCom.h  NetworkAPI.h  SafeQueue.h  ServerLink.h  Sound.hpp  Transformer.h  UserInterfaceController.h  WindowsNetworkAPI.h  WindowsNetworkDefines.h  moc_UserInterfaceController.cpp  moc_UserInterfaceController.cpp_parameters
Client/src/: AudiOutput.cpp  AudioCodec.cpp  AudioController.cpp  AudioInput.cpp  Core.cpp  GUI.cpp  InterClientCom.cpp  SafeQueue.cpp  ServerLink.cpp  Transformer.cpp  UMutex.cpp  UserInterfaceController.cpp  WindowsNetworkAPI.cpp  main.cpp
CommonIncludes/: ClientPacket.h  InterClientPacket.h  NetworkAPI.h  ServerPacket.h  UNetworkAPI.cpp  UNetworkAPI.h  WNetworkAPI.cpp  WNetworkAPI.h  WindowsNetworkDefines.h
Server/: CMakeLists.txt  ClientBase.cpp  ClientBase.h  ClientDataHandler.cpp  ClientDataHandler.h  ClientRuntime.cpp  ClientRuntime.h  IClientData.h  Makefile  Network.h  WNetworkAPI.cpp  WNetworkAPI.h  main.cpp
includes/: Core.h  GUI.h  IMutex.h  NetworkAPI.h  UNetworkAPI.h  UserInterfaceController.h  WindowsNetworkDefines.h  moc_UserInterfaceController.cpp  moc_UserInterfaceController.cpp_parameters
opus-1.1/: Makefile  config.status  libopus.la  libtool  opus.pc  opus_compare  opus_demo  repacketizer_demo
pa/: portaudio_x86.exp  portaudio_x86.lib  vc140.idb
portaudio/: config.status  libtool
(+224 files in other folders)
